# call-cpplib-by-go-sample

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  main.go
cpplib/: TestLibrary.cpp  TestLibrary.h
docker/executor/: Dockerfile
